Improve GUI - add description - scale plane relative to number of notes

--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
 <body>
 	<div class="menu">
 		<button type="button" class="menu-burger">
-			<span></span><i>Show Menu</i><span></span>
+			<span></span><i></i><span></span>
 		</button>
 	</div>
 
 	<div class="controls">
-		<h1>hello</h1>
+		<h1>Webaudio Playground</h1>
+
+		<p>Experiments with three.js and tone.js.</p>
+		<p>Made by <a href="http://fredericbriolet.com" translate="blank_">Fred Briolet</a></p>
 	</div>
+
+	<div class="stats-container"></div>
 
 	<script src="js/vendor/three.min.js"></script>
 	<script src="js/vendor/OrbitControls.js"></script>
