--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 	<div class="stats-container"></div>
 
+	<script src="js/vendor/cannon.min.js"></script>
 	<script src="js/vendor/three.min.js"></script>
 	<script src="js/vendor/OrbitControls.js"></script>
 	<script src="js/vendor/dat.gui.min.js"></script>
