Tidy - fragmented js in files

--- a/index.html
+++ b/index.html
@@ -35,5 +35,10 @@
 	<script src="js/vendor/stats.min.js"></script>
 	<script src="js/vendor/TweenMax.min.js"></script>
 
-	<script src="js/main.js"></script>
+	<script src="js/variables.js"></script>
+	<script src="js/interface.js"></script>
+	<script src="js/notes.js"></script>
+	<script src="js/scene.js"></script>
+	<script src="js/music.js"></script>
+	<script src="js/gui.js"></script>
 </body>
